; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_cx24110.c_cx24110_get_frontend.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_cx24110.c_cx24110_get_frontend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.cx24110_state* }
%struct.cx24110_state = type { i32 }
%struct.dvb_frontend_parameters = type { i32, %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@INVERSION_ON = common dso_local global i32 0, align 4
@INVERSION_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, %struct.dvb_frontend_parameters*)* @cx24110_get_frontend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cx24110_get_frontend(%struct.dvb_frontend* %0, %struct.dvb_frontend_parameters* %1) #0 {
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca %struct.dvb_frontend_parameters*, align 8
  %5 = alloca %struct.cx24110_state*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  store %struct.dvb_frontend_parameters* %1, %struct.dvb_frontend_parameters** %4, align 8
  %8 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %9 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %8, i32 0, i32 0
  %10 = load %struct.cx24110_state*, %struct.cx24110_state** %9, align 8
  store %struct.cx24110_state* %10, %struct.cx24110_state** %5, align 8
  %11 = load %struct.cx24110_state*, %struct.cx24110_state** %5, align 8
  %12 = call i32 @cx24110_readreg(%struct.cx24110_state* %11, i32 7)
  %13 = and i32 %12, 3
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  store i32 45499500, i32* %7, align 4
  br label %28

17:                                               ; preds = %2
  %18 = load i32, i32* %7, align 4
  %19 = icmp eq i32 %18, 1
  br i1 %19, label %20, label %21

20:                                               ; preds = %17
  store i32 60666000, i32* %7, align 4
  br label %27

21:                                               ; preds = %17
  %22 = load i32, i32* %7, align 4
  %23 = icmp eq i32 %22, 2
  br i1 %23, label %24, label %25

24:                                               ; preds = %21
  store i32 80888000, i32* %7, align 4
  br label %26

25:                                               ; preds = %21
  store i32 90999000, i32* %7, align 4
  br label %26

26:                                               ; preds = %25, %24
  br label %27

27:                                               ; preds = %26, %20
  br label %28

28:                                               ; preds = %27, %16
  %29 = load i32, i32* %7, align 4
  %30 = lshr i32 %29, 8
  store i32 %30, i32* %7, align 4
  %31 = load i32, i32* %7, align 4
  %32 = load %struct.cx24110_state*, %struct.cx24110_state** %5, align 8
  %33 = call i32 @cx24110_readreg(%struct.cx24110_state* %32, i32 68)
  %34 = and i32 %33, 31
  %35 = mul i32 %31, %34
  %36 = load i32, i32* %7, align 4
  %37 = load %struct.cx24110_state*, %struct.cx24110_state** %5, align 8
  %38 = call i32 @cx24110_readreg(%struct.cx24110_state* %37, i32 69)
  %39 = mul i32 %36, %38
  %40 = lshr i32 %39, 8
  %41 = add i32 %35, %40
  %42 = load i32, i32* %7, align 4
  %43 = load %struct.cx24110_state*, %struct.cx24110_state** %5, align 8
  %44 = call i32 @cx24110_readreg(%struct.cx24110_state* %43, i32 70)
  %45 = mul i32 %42, %44
  %46 = lshr i32 %45, 16
  %47 = add i32 %41, %46
  store i32 %47, i32* %6, align 4
  %48 = load i32, i32* %6, align 4
  %49 = load %struct.dvb_frontend_parameters*, %struct.dvb_frontend_parameters** %4, align 8
  %50 = getelementptr inbounds %struct.dvb_frontend_parameters, %struct.dvb_frontend_parameters* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = add i32 %51, %48
  store i32 %52, i32* %50, align 4
  %53 = load %struct.cx24110_state*, %struct.cx24110_state** %5, align 8
  %54 = call i32 @cx24110_readreg(%struct.cx24110_state* %53, i32 34)
  %55 = and i32 %54, 16
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %57, label %59

57:                                               ; preds = %28
  %58 = load i32, i32* @INVERSION_ON, align 4
  br label %61

59:                                               ; preds = %28
  %60 = load i32, i32* @INVERSION_OFF, align 4
  br label %61

61:                                               ; preds = %59, %57
  %62 = phi i32 [ %58, %57 ], [ %60, %59 ]
  %63 = load %struct.dvb_frontend_parameters*, %struct.dvb_frontend_parameters** %4, align 8
  %64 = getelementptr inbounds %struct.dvb_frontend_parameters, %struct.dvb_frontend_parameters* %63, i32 0, i32 2
  store i32 %62, i32* %64, align 4
  %65 = load %struct.cx24110_state*, %struct.cx24110_state** %5, align 8
  %66 = call i32 @cx24110_get_fec(%struct.cx24110_state* %65)
  %67 = load %struct.dvb_frontend_parameters*, %struct.dvb_frontend_parameters** %4, align 8
  %68 = getelementptr inbounds %struct.dvb_frontend_parameters, %struct.dvb_frontend_parameters* %67, i32 0, i32 1
  %69 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %68, i32 0, i32 0
  %70 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %69, i32 0, i32 0
  store i32 %66, i32* %70, align 4
  ret i32 0
}

declare dso_local i32 @cx24110_readreg(%struct.cx24110_state*, i32) #1

declare dso_local i32 @cx24110_get_fec(%struct.cx24110_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
